# Lumison

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
.claude/: settings.local.json
docs/: README.ja.md  README.md  README.zh-CN.md
scripts/ytmusic/: README.md  setup.bat  setup.sh  ytmusic_wrapper.py
src/: App.tsx  index.css  index.tsx  types.ts
src-tauri/: Cargo.toml
src-tauri/src/: features.rs  lib.rs  sqlite_cache.rs
src/components/: Controls.tsx  LyricsView.tsx  SearchModal.tsx  TopBar.tsx  UpdateNotification.tsx
src/components/common/: Icons.tsx  LoadingScreen.tsx  Onboarding.tsx  SmartImage.tsx  SpeedIndicator.tsx  Toast.tsx
src/components/layout/: DesktopLayout.tsx  FluidBackground.tsx  Layout.tsx  ShaderBackground.tsx  TopBar.tsx
src/components/modals/: AboutDialog.tsx  FocusSessionModal.tsx  ImportMusicDialog.tsx  SearchModal.tsx  UpdateNotification.tsx
src/components/player/: Controls.tsx  LyricsView.tsx  MediaSessionController.tsx  PlaylistPanel.tsx
src/components/ui/: AlbumMode.css  AlbumMode.tsx  GlassButton.tsx  GlassPanel.tsx  IconCircleButton.tsx  (+3 more)
src/config/: performance.ts
src/contexts/: PlayerContext.tsx  ThemeContext.tsx
src/hooks/: useInternetArchiveSearch.ts  useKugouSearchProvider.ts  useMobilePanelSwipe.tsx  useNeteaseSearchProvider.ts  usePlayer.ts  usePlaylist.ts  useResponsiveLayout.tsx  useSearchCache.ts  useSearchHistory.ts  useSearchModal.ts  useSearchProvider.ts  useVisualMode.ts
src/services/: cache.ts  request.ts  streamingProxy.ts  utils.ts
src/utils/: blurhash.ts  fileHash.ts  searchResultLookup.ts
(+32 files in other folders)
