[package]
name = "lumison"
version = "1.0.2"
edition = "2021"

[lib]
name = "lumison_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
hex = "0.4"
base64 = "0.22"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# Future dependencies for system-level features:
# windows = { version = "0.58", features = ["Win32_Media_Audio"] }  # For WASAPI
# cpal = "0.15"  # Cross-platform audio I/O (alternative to WASAPI)

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
